--- a/src/main/resources/assets/guardvillagers/lang/es_es.json
+++ b/src/main/resources/assets/guardvillagers/lang/es_es.json
@@ -4,4 +4,6 @@
 "item.guardvillagers.illusioner_spawn_egg": "Huevo generador de Ilusionista",
 "item.guardvillagers.iron_golem_spawn_egg": "Huevo generador de Golem de Hierro",
 "item.guardvillagers.snow_golem_spawn_egg": "Huevo generador de Golem de las Nieves"
+"guardinventory.health": "Salud: %s",
+"guardinventory.armor": "Armadura: %s"
 }
