--- a/src/main/resources/assets/guardvillagers/lang/es_es.json
+++ b/src/main/resources/assets/guardvillagers/lang/es_es.json
@@ -5,5 +5,5 @@
 "item.guardvillagers.iron_golem_spawn_egg": "Huevo generador de Golem de Hierro",
 "item.guardvillagers.snow_golem_spawn_egg": "Huevo generador de Golem de las Nieves",
 "guardinventory.health": "Salud: %s",
-"guardinventory.armor": "Armadura: %s",
+"guardinventory.armor": "Armadura: %s"
 }
